; ModuleID = '/home/carl/AnghaBench/lz4/programs/extr_lz4cli.c_lastNameFromPath.c'
source_filename = "/home/carl/AnghaBench/lz4/programs/extr_lz4cli.c_lastNameFromPath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @lastNameFromPath to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @lastNameFromPath(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  store i8* %4, i8** %3, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i8* @strrchr(i8* %5, i8 signext 47)
  %7 = icmp ne i8* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = call i8* @strrchr(i8* %9, i8 signext 47)
  %11 = getelementptr inbounds i8, i8* %10, i64 1
  store i8* %11, i8** %3, align 8
  br label %12

12:                                               ; preds = %8, %1
  %13 = load i8*, i8** %3, align 8
  %14 = call i8* @strrchr(i8* %13, i8 signext 92)
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = load i8*, i8** %3, align 8
  %18 = call i8* @strrchr(i8* %17, i8 signext 92)
  %19 = getelementptr inbounds i8, i8* %18, i64 1
  store i8* %19, i8** %3, align 8
  br label %20

20:                                               ; preds = %16, %12
  %21 = load i8*, i8** %3, align 8
  ret i8* %21
}

declare dso_local i8* @strrchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
